# noidle.app

./: .gitignore  LICENSE  README.md  SIGNING.md  mouse_ziggler.py  noidle.py  pyproject.toml  vercel.json
.claude/agents/: CANVAS_CREW.md  axel.md  mira.md  vera.md
.github/workflows/: build.yml  lint.yml  update-readme.yml
docs/: hid-vs-software.md  release.md  teams-presence.md  windows-internals.md
installer/: LICENSE.rtf  MouseZiggler.wxs  noidle.wxs
public/: index.html
scripts/: make_icon.py
src/zig/: __main__.py  activity.py  autostart.py  config.py  hotkey.py  jiggler.py  logging_setup.py  stats.py  tray.py  updater.py  whats_new.py  winapi.py
tests/: test_config.py  test_updater.py  test_whats_new.py
