[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noidle-app"
version = "0.3.4"
description = "Friendly Windows tray app that keeps your status fresh — no more orange Away dot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Caleb O'Hara", email = "caleb.ohara@gmail.com" }]
keywords = ["noidle", "presence", "teams", "tray", "windows", "stay-active"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Utilities",
]
dependencies = [
    "pystray>=0.19",
    "Pillow>=10",
]

[project.scripts]
noidle = "zig.__main__:main"

[project.urls]
Homepage = "https://github.com/calebohara/noidle.app"
Source = "https://github.com/calebohara/noidle.app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["zig*"]
